crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__smugglers_copter_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredSpell": {
        "kind": "Spell",
        "effect": {
          "type": "Unimplemented",
          "name": "unknown",
          "description": "Flying"
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": "Flying",
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    },
    {
      "PreLoweredTrigger": {
        "mode": "AttacksOrBlocks",
        "execute": {
          "kind": "Spell",
          "effect": {
            "type": "Draw",
            "count": {
              "type": "Fixed",
              "value": 1
            },
            "target": {
              "type": "Controller"
            }
          },
          "cost": null,
          "sub_ability": {
            "kind": "Spell",
            "effect": {
              "type": "Discard",
              "count": {
                "type": "Fixed",
                "value": 1
              },
              "target": {
                "type": "Controller"
              }
            },
            "cost": null,
            "sub_ability": null,
            "duration": null,
            "description": null,
            "target_prompt": null,
            "sorcery_speed": false,
            "condition": {
              "type": "IfYouDo"
            },
            "optional_targeting": false,
            "optional": false,
            "forward_result": false
          },
          "duration": null,
          "description": null,
          "target_prompt": null,
          "sorcery_speed": false,
          "condition": null,
          "optional_targeting": false,
          "optional": true,
          "forward_result": false
        },
        "valid_card": {
          "type": "SelfRef"
        },
        "origin": null,
        "destination": null,
        "trigger_zones": [
          "Battlefield"
        ],
        "phase": null,
        "optional": true,
        "damage_kind": "Any",
        "secondary": false,
        "valid_target": null,
        "valid_source": null,
        "description": "Whenever ~ attacks or blocks, you may draw a card. If you do, discard a card.",
        "constraint": null,
        "condition": null,
        "batched": false
      }
    },
    {
      "Keyword": {
        "Crew": 1
      }
    }
  ],
  "source_text": "Flying\nWhenever this Vehicle attacks or blocks, you may draw a card. If you do, discard a card.\nCrew 1 (Tap any number of creatures you control with total power 1 or more: This Vehicle becomes an artifact creature until end of turn.)",
  "card_name": "Smuggler's Copter"
}
