crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__snapcaster_mage_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "Unimplemented",
        "name": "unknown",
        "description": "Flash"
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": "Flash",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [
    {
      "mode": "ChangesZone",
      "execute": {
        "kind": "Spell",
        "effect": {
          "type": "GenericEffect",
          "static_abilities": [
            {
              "mode": "Continuous",
              "affected": {
                "type": "ParentTarget"
              },
              "modifications": [
                {
                  "type": "AddKeyword",
                  "keyword": {
                    "Flashback": {
                      "type": "Mana",
                      "data": {
                        "type": "SelfManaCost"
                      }
                    }
                  }
                }
              ],
              "condition": null,
              "affected_zone": null,
              "effect_zone": null,
              "active_zones": [],
              "characteristic_defining": false,
              "description": "gain flashback"
            }
          ],
          "duration": "UntilEndOfTurn",
          "target": {
            "type": "Or",
            "filters": [
              {
                "type": "Typed",
                "type_filters": [
                  "Instant"
                ],
                "controller": "You",
                "properties": [
                  {
                    "type": "InZone",
                    "zone": "Graveyard"
                  }
                ]
              },
              {
                "type": "Typed",
                "type_filters": [
                  "Sorcery"
                ],
                "controller": "You",
                "properties": [
                  {
                    "type": "InZone",
                    "zone": "Graveyard"
                  }
                ]
              }
            ]
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": "UntilEndOfTurn",
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "valid_card": {
        "type": "SelfRef"
      },
      "origin": null,
      "destination": "Battlefield",
      "trigger_zones": [
        "Battlefield"
      ],
      "phase": null,
      "optional": false,
      "damage_kind": "Any",
      "secondary": false,
      "valid_target": null,
      "valid_source": null,
      "description": "When ~ enters, target instant or sorcery card in your graveyard gains flashback until end of turn. The flashback cost is equal to its mana cost.",
      "constraint": null,
      "condition": null,
      "batched": false
    }
  ],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
