crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__thalia_guardian_of_thraben_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "Unimplemented",
        "name": "unknown",
        "description": "First strike"
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": "First strike",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [
    {
      "mode": {
        "RaiseCost": {
          "amount": {
            "type": "Cost",
            "shards": [],
            "generic": 1
          },
          "spell_filter": {
            "type": "Typed",
            "type_filters": [
              {
                "Non": "Creature"
              }
            ],
            "controller": null,
            "properties": []
          },
          "dynamic_count": null
        }
      },
      "affected": {
        "type": "Typed",
        "type_filters": [
          "Card"
        ],
        "controller": null,
        "properties": []
      },
      "modifications": [],
      "condition": null,
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "Noncreature spells cost {1} more to cast."
    }
  ],
  "replacements": [],
  "extractedKeywords": []
}
